--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <link rel="stylesheet" href="css/styles.css?v=1.0">
 
 </head>
-
+<nav>
+  <ul><a href="Home"></a></ul>
+</nav>
 <body>
   <script src="js/scripts.js"></script>
 </body>
